create base structure and auth
