# server/src/controllers/auth.controller.js
@@ -1,0 +1,30 @@
+const express = require('express');
+const authRouter = new express.Router();
+
+const User = require('../models/user.model');
+const { asyncErrorHandle } = require('../utils/app.util');
+const {
+  registerUser,
+  createAndGetJwtToken,
+  validateUserCredentials,
+} = require('../services/auth.service');
+
+
+authRouter.post('/register', asyncErrorHandle(async (req, res) => {
+  const { email, password } = req.body;
+  await registerUser({ email, password });
+  res.send({ message: 'Profile created successfully' });
+}));
+
+authRouter.post('/login', asyncErrorHandle(async (req, res) => {
+  const { email, password } = req.body;
+  const userDoc = await User.findOne({ email });
+  await validateUserCredentials({ userDoc, password });
+  const jwtToken = await createAndGetJwtToken(userDoc);
+  res.cookie('token', jwtToken, { httpOnly: true });
+  res.send({ jwtToken: jwtToken });
+}));
+
+module.exports = {
+  authRouter,
+};
